--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         <div class="login-container">        
         <form action="login" method="GET">
             <div class="logo-container">
-                <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+                <a href="home.html"><img src="hopebridge.jpg" alt="Company Logo" class="Logo"></a>
                 <label>Welcome to </label>
                 <a href="home.html" class="HopeBridge">HopeBridge</a>
             </div>
