--- a/choosingpart.html
+++ b/choosingpart.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choosing Part</title>
     <link rel="stylesheet" href="choose.css">
 </head>
 <body>
-    <h3>Choose  to sign in</h3>
-    <div class="links">
-        <a href="home.html">User </a>
-        <a href="login.html">Admin</a>
+    <h3 class="arrow-heading">Choose to sign in</h3>
+    <div class="wrapper">
+        <div class="card"><a href="home.html">User </a></div>
+        <div class="card"><a href="login.html">Admin</a></div>
     </div>
 </body>
 </html>
