--- a/settings.html
+++ b/settings.html
@@ -4,68 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="adminpage.css"> <!-- Your external CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-    <header>
-        <div class="logo-container">
-            <a href="adminpage.html"><img src="hopebridge.jpg" alt="Company Logo" class="Logo"></a>
-            <a href="adminpage.html" class="HopeBridge">HopeBridge</a>
-        </div>
+    <body>
         <nav class="nav-menu">
-            <nav class="nav-menu">
-                <a href="adminpage.html" class="nav-link home">Home</a>
-                <a href="user-management.html" class="nav-link user-management">User  Management</a>
-                <a href="newss.html" class="nav-link news">News</a>
-                <a href="pending.html" class="nav-link pending">Pending</a>
-                <a href="reports.html" class="nav-link reports">Reports</a>
-                <a href="abouts.html" class="nav-link about">About</a>
-                <a href="settings.html" class="nav-link settings">Settings</a>
-                <a href="logout.html" class="nav-link logout">Log Out</a>
-            </nav>
-    </header>
-    <main>
-        <section class="settings-section">
-            <h2>Settings</h2>
-            <div class="settings-container">
-                <div class="setting-item">
-                    <h3>User Management</h3>
-                    <button onclick="location.href='user-management.html'">Manage Users</button>
-                </div>
-                <div class="setting-item">
-                    <h3>Security</h3>
-                    <label><input type="checkbox"> Enable Two-Factor Authentication (2FA)</label>
-                    <label><input type="checkbox"> Allow Password Reset</label>
-                </div>
-                <div class="setting-item">
-                    <h3>Theme</h3>
-                    <label><input type="radio" name="theme" value="light" id="light-mode"> Light Mode</label>
-                    <label><input type="radio" name="theme" value="dark" id="dark-mode"> Dark Mode</label>
-                </div>
-                <div class="setting-item">
-                    <h3>Notifications</h3>
-                    <label><input type="checkbox"> Email Notifications</label>
-                    <label><input type="checkbox"> SMS Alerts</label>
-                </div>
+            <div class="logo-container">
+                <a href="adminpage.html">
+                    <img src="hopebridge.jpg" alt="Company Logo" class="logo">
+                </a>
+                <h1 class="site-title">HopeBridge</h1>
             </div>
-        </section>
-    </main>
-
-        <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const currentLocation = window.location.pathname;
-            const navLinks = document.querySelectorAll('.nav-menu a');
-
-            navLinks.forEach(link => {
-                if (link.href.includes(currentLocation)) {
-                    link.classList.add('active');
-                }
-            });
-        });
-    </script>
+            <div class="menu-sidebar">
+                <a href="adminpage.html" class="nav-link home"><ion-icon name="home-outline"></ion-icon>Home</a>
+                <a href="user-management.html" class="nav-link user-management"><ion-icon name="people-outline"></ion-icon> User Management</a>
+                <a href="newss.html" class="nav-link news"><ion-icon name="newspaper-outline"></ion-icon> News</a>
+                <a href="pending.html" class="nav-link pending"><ion-icon name="time-outline"></ion-icon> Pending</a>
+                <a href="reports.html" class="nav-link reports"><ion-icon name="document-text-outline"></ion-icon> Reports</a>
+                <a href="abouts.html" class="nav-link about"><ion-icon name="information-circle-outline"></ion-icon> About Us</a>
+                <a href="settings.html" class="nav-link settings"><ion-icon name="settings-outline"></ion-icon> Settings</a>
+                <a href="logout.html" class="nav-link logout"><ion-icon name="log-out-outline"></ion-icon> Log Out</a>
+            </div>
+        </nav>        
 </body>
+<script src="main.js"></script>
 </html>
