--- a/signup.html
+++ b/signup.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HopeBridge signup</title>
-        <link rel="stylesheet" href="style.css">
+        <title>HopeBridge Signup</title>
+        <link rel="stylesheet" href="signup.css">
     </head>
     <body>
-        <div class="login-container">        
-        <form action="signup" method="GET">
-            <div class="logo-container">
-                <label>Welcome to </label>
-                <a href="home.html" class="HopeBridge">HopeBridge</a>
-            </div>
-            <input type="text" id="username" name="username" placeholder="Create Username" required>
-            <input type="password" id="password1" name="password1" placeholder="Create Password" required>
-            <input type="password" id="password2" name="password2" placeholder="Confirm Password" required>
-            <input type="text" id="email" name="email" placeholder="Email Address" required>
-
-            <input type="submit" value="Login">
-        </div>
+        <div class="signup-wrapper">
+            <!-- Left Section: Signup Form -->
             <div class="signup-container">
-                <p>Already have an account? <a href="login.html">Login.</a></p>
+                <h2>Signup</h2>
+                <p>Create your account</p>
+                <form action="signup" method="POST">
+                    <div class="input-group">
+                        <input type="text" id="username" name="username" placeholder="Create Username" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="password" id="password1" name="password1" placeholder="Create Password" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="password" id="password2" name="password2" placeholder="Confirm Password" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                    </div>
+                    <button type="submit" value="Sign Up">Sign Up</button>
+                </form>
+                <div class="login-redirect">
+                    <p>Already have an account? <a href="login.html">Login</a></p>
+                </div>
             </div>
-        </form>
- 
+
+            <!-- Right Section: Branding -->
+            <div class="brand-container">
+                <img src="hopebridge.jpg" alt="HopeBridge Logo" class="logo">
+                <span class="HopeBridge">HopeBridge</span>
+            </div>
+        </div>
     </body>
 </html>
