--- a/reports.html
+++ b/reports.html
@@ -20,12 +20,12 @@
                 <h1 class="site-title">HopeBridge</h1>
             </div>
             <div class="menu-sidebar">
-            <a href="adminpage.html" class="nav-link home"><ion-icon name="home-outline"></ion-icon> Home</a>
-            <a href="user-management.html" class="nav-link user-management"><ion-icon name="people-outline"></ion-icon> User Management</a>
-            <a href="reports.html" class="nav-link reports"><ion-icon name="document-text-outline"></ion-icon> Reports</a>
-            <a href="organizations.html" class="nav-link reports"><ion-icon name="document-text-outline"></ion-icon> Organizations</a>
-            <a href="settings.html" class="nav-link settings"><ion-icon name="settings-outline"></ion-icon> Settings</a>
-            <a href="logout.html" class="nav-link logout"><ion-icon name="log-out-outline"></ion-icon> Log Out</a>
+                <a href="adminpage.html" class="nav-link home"><ion-icon name="home-outline"></ion-icon> Home</a>
+                <a href="organizations.html" class="nav-link reports"><ion-icon name="business-outline"></ion-icon> Organizations</a>
+                <a href="reports.html" class="nav-link reports"><ion-icon name="bar-chart-outline"></ion-icon> Reports</a>
+                <a href="user-management.html" class="nav-link user-management"><ion-icon name="people-outline"></ion-icon> User Management</a>
+                <a href="settings.html" class="nav-link settings"><ion-icon name="settings-outline"></ion-icon> Settings</a>
+                <a href="logout.html" class="nav-link logout"><ion-icon name="log-out-outline"></ion-icon> Log Out</a>
             </div>
         </nav>        
 </body>
