--- a/user-management.html
+++ b/user-management.html
@@ -52,17 +52,12 @@
                 <tr data-role="Admin">
                     <td>Juan Dela Cruz</td>
                     <td>juan@example.com</td>
-                    <td><span class="user-role admin">Admin</span></td>
+                    <td>User</td>
                     <td class="status">Active</td>
                     <td class="action-buttons">
-                        <div class="dropdown">
-                            <button class="dots-menu"><i class="fas fa-ellipsis-v"></i></button>
-                            <div class="dropdown-content">
-                                <a href="#" class="view-user">View</a>
-                                <a href="#" class="edit-user">Edit</a>
-                                <a href="#" class="block-user" onclick="blockUser(this)">Block</a>
-                                <a href="#" class="delete-user" onclick="deleteUser(this)">Delete</a>
-                            </div>
+                        <div class="btn-group">
+                            <button class="edit-btn">Edit</button>
+                            <button class="delete-btn">Delete</button>
                         </div>
                     </td>
                 </tr>
